@@ -1,3 +1,9 @@
+2012-10-06  Jan Kratochvil  <jan.kratochvil@redhat.com>
+
+	Fix crash during stepping on ppc32.
+	* ppc-linux-tdep.c (powerpc_linux_in_dynsym_resolve_code): Test NULL
+	SYM.
+
 2012-09-17  Jan Kratochvil  <jan.kratochvil@redhat.com>
 
 	* common/linux-ptrace.c: Change __i386__ to __i386__ || __x86_64__.
